--- a/Proiect.html
+++ b/Proiect.html
@@ -18,7 +18,32 @@
         <ul>
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#">Categorii</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="contact-menu-container">
+            <a href="#" class="contact-button">Contact</a>
+            <div class="circular-menu">
+              <a
+                href="https://www.instagram.com/"
+                class="menu-item"
+                target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.facebook.com/"
+                class="menu-item"
+                target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://github.com/" class="menu-item" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a
+                href="https://www.youtube.com/"
+                class="menu-item"
+                target="_blank"
+                ><i class="fab fa-youtube"></i
+              ></a>
+            </div>
+          </li>
         </ul>
       </nav>
       <div class="search-bar">
