--- a/Proiect.html
+++ b/Proiect.html
@@ -17,7 +17,20 @@
       <nav class="site-nav">
         <ul>
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">Categorii</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle">Categorii</a>
+            <ul class="dropdown-menu">
+              <li><a href="#"> Horror & Supranatural</a></li>
+              <li><a href="#">Thriller & Mister</a></li>
+              <li><a href="#">Fantasy mitologic pentru tineri)</a></li>
+              <li>
+                <a href="#">Science-Fiction, Politică, Religie, Ecologie</a>
+              </li>
+              <li>
+                <a href="#">Fantasy epic, Politică, Intrigă, Război, Dragon</a>
+              </li>
+            </ul>
+          </li>
           <li class="contact-menu-container">
             <a href="#" class="contact-button">Contact</a>
             <div class="circular-menu">
